# time-tracker-plugin-template

./: Cargo.toml  README.md  plugin.toml
src/: lib.rs  plugin.rs
